[package]
name = "tokio-fs-ext"
version = "0.0.4"
edition = "2024"
authors = ["xusd320"]
description = "Extend tokio fs to be compatible with native and wasm"
license = "MIT"
repository = "https://github.com/xusd320/tokio-fs-ext.git"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]


[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
tokio = { version = "1.46.1", default-features = false, features = ["fs"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
  "DedicatedWorkerGlobalScope",
  "DomException",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemGetFileOptions",
  "FileSystemGetDirectoryOptions",
  "FileSystemHandle",
  "FileSystemHandleKind",
  "FileSystemHandlePermissionDescriptor",
  "FileSystemReadWriteOptions",
  "FileSystemRemoveOptions",
  "FileSystemSyncAccessHandle",
  "FileSystemWritableFileStream",
  "Navigator",
  "StorageManager",
  "WorkerNavigator",
  "console",
] }
wasm-bindgen = { version = "0.2.100", default-features = false }
wasm-bindgen-futures = { version = "0.4.50", features = [
  "futures-core-03-stream",
] }
tokio = { version = "1.46.1", default-features = false, features = ["sync"] }
send_wrapper = "0.6.0"
futures = "0.3.31"
path-absolutize = { version = "3.1.1", features = [
  "use_unix_paths_on_wasm",
  "once_cell_cache",
] }
bitflags = "2.9.1"

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
