[package]
name = "tokio-fs-ext"
version = "0.6.3"
edition = "2024"
authors = ["xusd320"]
description = "Extend tokio fs to be compatible with native and wasm"
license = "MIT"
repository = "https://github.com/xusd320/tokio-fs-ext.git"
keywords = ["tokio", "fs", "wasm", "opfs"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
opfs_offload = ["tokio/sync"]
opfs_watch = ["tokio/sync", "notify-types"]
opfs_tracing = ["tracing"]

[dependencies]
futures = "0.3.31"
cfg-if = "1.0.1"


[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
pin-project-lite = "0.2.16"
tokio = { version = "1.47.1", default-features = false, features = [
  "fs",
  "sync",
] }
tokio-stream = { version = "0.1.17", features = ["fs"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = "0.3.78"
web-sys = { version = "0.3.78", features = [
  "DedicatedWorkerGlobalScope",
  "DomException",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemGetFileOptions",
  "FileSystemGetDirectoryOptions",
  "FileSystemHandle",
  "FileSystemHandleKind",
  "FileSystemHandlePermissionDescriptor",
  "FileSystemReadWriteOptions",
  "FileSystemRemoveOptions",
  "FileSystemSyncAccessHandle",
  "FileSystemWritableFileStream",
  "Navigator",
  "StorageManager",
  "WorkerNavigator",
  "console",
] }
wasm-bindgen = { version = "0.2.101", default-features = false }
wasm-bindgen-futures = { version = "0.4.51", features = [
  "futures-core-03-stream",
] }
tokio = { version = "1.47.1", default-features = false, optional = true }
bitflags = "2.9.1"
rustc-hash = "2.1.1"
notify-types = { version = "2.0.0", optional = true }
tracing = { version = "0.1.41", optional = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.51"

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "test-util"] }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.docs.rs]
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "wasm32-unknown-unknown",
]
